force-app/main/default/objects/Quote_Approval_Attribute__c/Quote_Approval_Attribute__c.object-meta.xml
<CustomObject>
    <label>Quote Approval Attribute</label>
    <nameField>
        <label>Quote Approval Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Approval Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>