force-app/main/default/objects/Quote_Approval_Attribute__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Approval Attributes</relationshipLabel>
    <relationshipName>Quote_Approval_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>